--- a/1.4/index.html
+++ b/1.4/index.html
@@ -152,6 +152,24 @@
   <!-- "reach out" section -->
   <section>
     <h2>Reach Out</h2>
+    <div class="contact-info">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2858.7269521097865!2d-76.49434402585031!3d44.23327966820137!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cd2ab074fa1bad3%3A0xd4e1aa5bdf7ca3e9!2sBurger%20King!5e0!3m2!1sen!2sca!4v1653359124183!5m2!1sen!2sca" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <div>
+        <h3>Run Buddy</h3>
+        <p>
+          Any questions or concerns before signing up?
+          <br />
+          Let us know and we'll be happy to talk to you!
+        </p>
+        <address>
+          55 Main Street <br/>
+          Some Town, Ca <br/>
+          12345<br />
+          P: 555.RUN.BUDZ (555.786.2839)<br/>
+          E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+        </address>
+      </div>
+    </div>
   </section>
 
   <!-- footer -->
